[package]
name = "pep-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
dahlia = "1.1.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.15", features = ["blocking"] }
serde_json = "1.0.94"
